k8s/overlays/prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-education-ingress
  namespace: smart-education
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "smart-education-ip"
    networking.gke.io/managed-certificates: "smart-education-certificate"
    networking.gke.io/v1beta1.FrontendConfig: "smart-education-frontend-config"
spec:
  rules:
    - host: smart-education.aldajh-software.com
      http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
